fix load on safari

--- a/css/all.css
+++ b/css/all.css
@@ -704,12 +704,14 @@
 }
 .loading-page .contentBox .svgBox svg .rotate .g2 {
   width: 100%;
+  transform-origin: center;
 }
 .loading-page .contentBox .svgBox svg .rotate .g2 path {
   transform: rotateY(180deg);
 }
 .loading-page .contentBox .svgBox svg .rotate .g4 {
   width: 100%;
+  transform-origin: center;
   opacity: 1;
 }
 .loading-page .contentBox .svgBox svg .rotate .g4 line {
